--- a/auth_function/functions/package.json
+++ b/auth_function/functions/package.json
@@ -14,6 +14,7 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "firebase": "^8.10.1",
